# PIPSxLinopy

./: CMakeLists.txt  LinopyCallback.cpp  LinopyCallback_with_class.cpp  LinopyModel.cpp  LinopyModel.hpp  README.md  pips-playaround.py
Linopy/: CMakeLists.txt  LinopyCallback.cpp  pips-playaround.py
Linopy/Linopy_Source/: LinopyModel.cpp
